test/samples/invalid/resolving/type_poly_struct.maruir
struct ArrWithLen<M; T> {
	arr: T[] *M;
	len: uint256;
}

fun arrLen<M; T>(arg: ArrWithLen<M; T> *M): uint256
locals res: uint256;
{
	entry:
		load arg.len in res;
		return res;
}

fun main<;T>(ptr: T<#memory; uint8> *#memory)
locals len: uint256;
{
	entry:
	return;
}